add learning navigation

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,6 +8,7 @@
         {{ partial "hero.html" . }}
         {{ partial "portfolio.html" . }}
         {{ partial "services.html" . }}
+        {{ partial "team.html" . }}
         {{ partial "about.html" . }}
         {{ partial "footer.html" . }}
         {{ partial "modals.html" . }}
