--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -24,12 +24,12 @@
                     <a class="page-scroll" href="#services">{{ with .Site.Params.navigation.services }}{{ . }}{{ end }}</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="#team">{{ with .Site.Params.navigation.team }}{{ . }}{{ end }}</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#about">{{ with .Site.Params.navigation.about }}{{ . }}{{ end }}</a>
                 </li>
-                <!-- <li> -->
-                    <!-- <a class="page-scroll" href="#team">{{ with .Site.Params.navigation.team }}{{ . }}{{ end }}</a> -->
-                <!-- </li> -->
-                <!-- <li> -->
+               <!-- <li> -->
                     <!-- <a class="page-scroll" href="#contact">{{ with .Site.Params.navigation.contact }}{{ . }}{{ end }}</a> -->
                 <!-- </li> -->
             </ul>
