add google google analytics

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,5 +13,6 @@
         {{ partial "footer.html" . }}
         {{ partial "modals.html" . }}
         {{ partial "js.html" . }}
+        {{ template "_internal/google_analytics_async.html" . }}
     </body>
 </html>
