--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,10 +1,11 @@
 {{ "<!-- About Section -->" | safeHTML }}
-<section id="about" class="bg-light-gray">
+<section id="about">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">{{ with .Site.Params.about.title }}{{ . }}{{ end }}</h2>
-                <h3 class="section-subheading text-muted">{{ with .Site.Params.about.subtitle }}{{ . | markdownify }}{{ end }}</h3>
+                <h3 class="section-subheading text-muted">
+                    {{ with .Site.Params.about.subtitle }}{{ . | markdownify }}{{ end }}</h3>
             </div>
         </div>
         <div class="row">
