--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -3,13 +3,15 @@
     <div class="container">
         {{ "<!-- Brand and toggle get grouped for better mobile display -->" | safeHTML }}
         <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">{{ with .Site.Params.navigation.brand }}{{ . }}{{ end }}</a>
+            <a class="navbar-brand page-scroll"
+                href="#page-top">{{ with .Site.Params.navigation.brand }}{{ . }}{{ end }}</a>
         </div>
         {{ "<!-- Collect the nav links, forms, and other content for toggling -->" | safeHTML }}
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -18,19 +20,21 @@
                     <a href="#page-top"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">{{ with .Site.Params.navigation.portfolio }}{{ . }}{{ end }}</a>
+                    <a class="page-scroll"
+                        href="#portfolio">{{ with .Site.Params.navigation.portfolio }}{{ . }}{{ end }}</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">{{ with .Site.Params.navigation.services }}{{ . }}{{ end }}</a>
-                </li>
+                    <a class="page-scroll"
+                        href="#services">{{ with .Site.Params.navigation.services }}{{ . }}{{ end }}</a>
+                    <!-- </li>
                 <li>
                     <a class="page-scroll" href="#team">{{ with .Site.Params.navigation.team }}{{ . }}{{ end }}</a>
-                </li>
+                </li> -->
                 <li>
                     <a class="page-scroll" href="#about">{{ with .Site.Params.navigation.about }}{{ . }}{{ end }}</a>
                 </li>
-               <!-- <li> -->
-                    <!-- <a class="page-scroll" href="#contact">{{ with .Site.Params.navigation.contact }}{{ . }}{{ end }}</a> -->
+                <!-- <li> -->
+                <!-- <a class="page-scroll" href="#contact">{{ with .Site.Params.navigation.contact }}{{ . }}{{ end }}</a> -->
                 <!-- </li> -->
             </ul>
         </div>
